# recruitimate

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.local.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f2832cd2568_add_live_transcript_segment.py  2c4118935894_candidate_portal_fields.py  34c9350f98f8_remove_audio_video_columns.py  765bf2272b9d_redesign_intelligence_schema.py  966c6d7d0867_drop_rawanalysis_column.py  a1b2c3d4e5f6_multi_job_candidate.py  a3f9e1b2c4d5_add_recruiter_review_fields.py  b1c2d3e4f5a6_add_hiring_client.py  c183f4948e9e_initial_schema.py  db4bfabf9637_talent_profile_skill_breakdown.py  dd86116921c4_interview_livekit_fields.py
backend/app/: main.py
backend/app/agent/: worker.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/features/admin/: router.py
backend/app/features/applications/: router.py  schemas.py  service.py
backend/app/features/auth/: router.py  schemas.py  service.py
backend/app/features/candidate_portal/: router.py  schemas.py  service.py
backend/app/features/candidates/: router.py  schemas.py  service.py
backend/app/features/clients/: router.py  schemas.py  (+1 more)
backend/app/shared/: models.py  permissions.py  storage.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_candidates.py  test_interviews.py  test_jobs.py
(+1026 files in other folders)
