[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "recruitimate-backend"
version = "0.1.0"
description = "Recruitimate FastAPI backend"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
alembic = "^1.13"
pydantic-settings = "^2.0"
email-validator = "^2.0"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
bcrypt = "==4.0.1"
python-multipart = "^0.0.9"
openai = "^1.0"
anthropic = "^0.30"
google-generativeai = "^0.7"
pypdf = "^4.0"
python-docx = "^1.1"
httpx = "^0.27"
icalendar = "^5.0"
celery = {extras = ["redis"], version = "^5.3"}
redis = "^5.0"
psycopg2-binary = "^2.9"
livekit = ">=1.0"
livekit-api = ">=1.0"
livekit-agents = ">=0.8"
boto3 = ">=1.34"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-httpx = "^0.30"
aiosqlite = "^0.20"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
